Various! mostly fixed Navbar and cleaned up
General: for several elements, introduced standard 800px max width (for widescreen computers)

App.js: Fixed Navbar formatting (no longer cut off to right)

index.css:
* Major deletions + some additions as I tried to fix Navbar
* jumbotron max width

bonus.js
* refactored some image code into helper Component "StandardSizedImage"
* fixed sizing. shouldn't bleed over. added max width/height. aspect ratios should be fine now.

contact.js: added "max width" for the big text box

home.js: discovered <wbr/> !

projects.js:
* I had a separate stylesheet there that I had forgotten to delete. dealt with that
* cleaned up card display logic with helper functions. "repo" and "last updated" are hidden by default. cleaned up implementation too

resume.js: max width

--- a/src/index.css
+++ b/src/index.css
@@ -23,30 +23,31 @@ code {
   /* background: radial-gradient(circle, rgba(55,53,80,0.8379726890756303) 5%, rgba(42,41,79,0.41780462184873945) 46%, rgba(30,30,78,0) 70%); */
 }
 
-.App-header {
-  background-color: #282c34;
-  /* background: linear-gradient(0deg, rgba(53,80,59,1) 0%, rgba(55,53,80,1) 3%, rgba(30,30,78,1) 97%, rgba(16,67,78,1) 100%); */
-  /* background: linear-gradient(0deg, rgba(55,53,80,1) 0%, rgba(30,30,78,1) 100%); */
+div#full-content {
+  /* navbar and page */
+  overflow-x: scroll;
   min-height: 100vh;
   height: 100%;
+  background-color: #282c34;
+}
+
+
+.App-header {
+  /* background: linear-gradient(0deg, rgba(53,80,59,1) 0%, rgba(55,53,80,1) 3%, rgba(30,30,78,1) 97%, rgba(16,67,78,1) 100%); */
+  /* background: linear-gradient(0deg, rgba(55,53,80,1) 0%, rgba(30,30,78,1) 100%); */
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  margin: auto;
-  overflow-y: scroll;
+  padding: 30px
 }
 
 div#main-content {
-  padding: 10px 10px;
-  font-size: 20px;
-  position: relative;
-  left: 0px;
+  justify-content: center;
 }
 
 div#page-content {
-  overflow-y: scroll;
-  padding-left: 70px;
-  padding-right: 10px;
+  padding: auto;
+  margin: auto;
 }
 
 
@@ -98,5 +99,6 @@ a.quietLink {
 
 .jumbotron {
   background-color: #0808082c;
+  max-width: 800px;
   color: black;
 }
